# detic_ros

./: .gitignore  .gitmodules  README.md
catkin_ws/src/detic_ros/: CMakeLists.txt  install.sh  package.xml
catkin_ws/src/detic_ros/config/: k4a_demo_rviz.rviz  k4a_pcd_rviz.rviz  rsd435_demo_rviz.rviz  usbcam_demo_rviz.rviz
catkin_ws/src/detic_ros/launch/: decompress.launch  k4a_bringup.launch  k4a_pcd_rviz.launch  resize.launch  rsd435_bringup.launch  sample.launch  usbcam_bringup.launch
catkin_ws/src/detic_ros/msg/: SegmentationInfo.msg
catkin_ws/src/detic_ros/scripts/: demo_ext.py  demo_ext.sh  masked_image_publisher.py  node.py  node_config.py  object_class_table.csv  wrapper.py
docker/: docker-compose.yml
docker/builddir/: Dockerfile_k4a  Dockerfile_rs435  build_wheel_rev.csh
utils/: k4a_demo.sh  rsd435_demo.sh  usbcam_demo.sh
