<?xml version="1.0"?>
<package format="2">
    <name>detic_ros</name>
    <version>0.0.0</version>
    <description>The ros driver for detic</description>

    <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
    <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>roscpp</depend>
    <depend>message_generation</depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
</package>
